RESOLVED FIXED19730
REGRESSION (r34497): Text in alerts in "Leisure suit Larry" is not wrapped
https://bugs.webkit.org/show_bug.cgi?id=19730
Summary REGRESSION (r34497): Text in alerts in "Leisure suit Larry" is not wrapped
Alexey Proskuryakov
Reported 2008-06-23 12:45:47 PDT
Steps to reproduce: 1. Open http://web.ist.utl.pt/~antonio.afonso/agi/ 2. Press Return. An in-game alert about "some elements of plot which may not be considered appropriate for some children" appears. It is too wide in ToT, as text is not wrapped. It is wrapped in Firefox 2 and in Safari 3.1.1
Attachments
reduction (877 bytes, text/html)
2008-06-23 23:15 PDT, Alexey Proskuryakov
no flags
further reduction (417 bytes, text/html)
2008-06-23 23:48 PDT, Alexey Proskuryakov
no flags
Proposed patch (1.21 KB, patch)
2008-06-24 02:00 PDT, Cameron Zwarich (cpst)
oliver: review+
mitz
Comment 1 2008-06-23 13:25:58 PDT
Looking around a little (until the inspector hit an assertion failure) did not convince me that this was necessarily a layout bug.
Alexey Proskuryakov
Comment 2 2008-06-23 23:15:46 PDT
Created attachment 21895 [details] reduction
Alexey Proskuryakov
Comment 3 2008-06-23 23:48:09 PDT
Created attachment 21896 [details] further reduction
Cameron Zwarich (cpst)
Comment 4 2008-06-24 00:02:48 PDT
The codegen tells me that this is probably my fault. I am pretty sure I know how to fix it. Assigning the bug to myself.
Cameron Zwarich (cpst)
Comment 5 2008-06-24 00:47:09 PDT
This is caused by r34497. Rolling out the change by hand fixes the bug.
Cameron Zwarich (cpst)
Comment 6 2008-06-24 02:00:39 PDT
Created attachment 21899 [details] Proposed patch I am writing some comprehensive tests for this class of bug right now, but I'll let someone review it first.
Oliver Hunt
Comment 7 2008-06-24 02:01:57 PDT
Comment on attachment 21899 [details] Proposed patch r=me, once you have some testcases
Cameron Zwarich (cpst)
Comment 8 2008-06-24 02:39:20 PDT
Landed in r34758.
Note You need to log in before you can comment on or make changes to this bug.