2008-06-24  Cameron Zwarich  <cwzwarich@uwaterloo.ca>

Reviewed by Oliver.

        Bug 19730: REGRESSION (r34497): Text in alerts in "Leisure suit Larry" is not wrapped
        <https://bugs.webkit.org/show_bug.cgi?id=19730>

        Do not convert the pair (less, jtrue) to jless when jtrue is a jump
        target. An example of this is when the condition of a while loop is a
        LogicalOrNode.

        JavaScriptCore:

        * VM/CodeGenerator.cpp:
        (KJS::CodeGenerator::emitLabel):

        LayoutTests:

        * fast/js/codegen-loops-logical-nodes-expected.txt: Added.
        * fast/js/codegen-loops-logical-nodes.html: Added.
        * fast/js/resources/codegen-loops-logical-nodes.js: Added.


Canonical link: https://commits.webkit.org/27206@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@34758 268f45cc-cd09-0410-ab3c-d52691b4dbfc